<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_code"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_code"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_client"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_client"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_1"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_2"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_2"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_3"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_3"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_4"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_4"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_5"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_5"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_6"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_6"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_7"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_7"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_8"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_8"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_9"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_9"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_10"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_10"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_11"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_11"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_month_12"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_month_12"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_table_row_total"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/text_total"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal" />

</androidx.appcompat.widget.LinearLayoutCompat>
