<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statements"
            android:orderInCategory="1"
            android:icon="@drawable/ic_fact_check_24"
            android:title="@string/menu_my_statements" />
        <item
            android:id="@+id/nav_messages"
            android:orderInCategory="2"
            android:icon="@drawable/ic_message_24"
            android:title="@string/menu_my_messages"/>
        <item
            android:id="@+id/nav_contacts"
            android:orderInCategory="3"
            android:icon="@drawable/ic_contact_mail_24"
            android:title="@string/menu_my_contacts" />
    </group>
</menu>