<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context=".activites.AnnualChargesActivity">

    <!-- ToolBar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/include_toolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Table -->
    <RelativeLayout
        android:id="@+id/rl_annual_charges_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar">

        <!-- Progress View -->
        <include layout="@layout/include_loading_view" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbarStyle="outsideInset">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal|vertical">

                <TableLayout
                    android:id="@+id/tl_annual_charges"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_60sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_code"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_120sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_client"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_1"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_2"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_3"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_4"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_5"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_6"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_7"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_8"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_9"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_10"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_11"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_40sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_month_12"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="@dimen/_80sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:background="@color/colorPrimary"
                                android:gravity="center"
                                android:text="@string/text_total"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12ssp"
                                android:textStyle="bold" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </TableRow>

                </TableLayout>

            </HorizontalScrollView>

        </androidx.core.widget.NestedScrollView>

        <!-- Empty View -->
        <include layout="@layout/include_empty_list_view" />

    </RelativeLayout>

</RelativeLayout>